# balatromobile

./: .gitattributes  .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
balatromobile/: __init__.py  gamble.py  patcher.py  resources.py  utils.py
balatromobile/artifacts/: AndroidManifest.xml  love-11.5-SAF-android-embed.apk  love-11.5-android-embed.apk  nunito-font.tty  uber-debug.keystore  zipalign-android-arm64  zipalign-darwin-amd64  zipalign-darwin-arm64  zipalign-linux-amd64  zipalign-linux-arm64  zipalign-windows-amd64  zipalign-windows-arm64
balatromobile/patches/: basic.toml  crt.toml  external-storage.toml  fix-beta-langs.toml  fps-settings.toml  fps.toml  landscape-hidpi.toml  landscape.toml  max-volume.toml  no-background.toml  no-beta-langs.toml  no-crt.toml  nunito-font.toml  portmaster-no-background.toml  portmaster-nunito-font.toml  portmaster-simple-fx.toml  portmaster-square-display.toml  shaders-flames.toml  simple-fx.toml  square-display.toml
misc/: GameActivity.java  logo.xcf
