[project]
name = "balatromobile"
authors = [
    {name = "antipatico", email = "code@bootkit.dev"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
dynamic = ["version", "description"]
dependencies = [
    "tabulate"
]

[project.scripts]
balatromobile = "balatromobile.gamble:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"